# geoplay

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/processed/clusters/: clusters.parquet  metrics.json
docs/: clustering_analysis.md  ranking_analysis.md
notebooks/: 01_eda.ipynb
src/geoplay/cli/: data.py  main.py
src/geoplay/data/: archetypes.py  config.py  events.py  geography.py  players.py  temporal.py
src/geoplay/features/: h3_utils.py  pipeline.py
src/geoplay/models/: clustering.py  evaluation.py  pipeline.py  visualization.py
src/geoplay/ranking/: api.py  dataset.py  evaluation.py  features.py  hex_features.py  model.py  pair_features.py  player_features.py  serving.py  tracking.py  tuning.py
tests/unit/: test_dataset.py  test_evaluation.py  test_model.py
